openshift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-dashboard-backend
  labels:
    app: openshift-dashboard
    component: backend
spec:
  ports:
  - port: 9150
    targetPort: 9150
    protocol: TCP
    name: http
  selector:
    app: openshift-dashboard
    component: backend
  type: ClusterIP
